bugfix: Prevent horizontal stretch from children

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -82,6 +82,7 @@ body {
 main {
     flex-grow: 1;
     display: flex;
+    flex-direction: column;
 }
 
 main > .row {
